--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,8 @@
 	/* Added for common bold weight */
 	--color-background: var(--gray-a1);
 
-	--color-panel-translucent: var(--accent-a1);
-	--color-panel-solid: var(--accent-1);
+	--color-panel-translucent: var(--accent-a2);
+	--color-panel-solid: var(--gray-1);
 }
 
 .rt-BaseButton {
